--- a/riscui-wasm-lib/Cargo.toml
+++ b/riscui-wasm-lib/Cargo.toml
@@ -21,6 +21,9 @@ risclang = { path = "../risclang" }
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.7", optional = true }
 js-sys = "0.3.64"
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
+serde-wasm-bindgen = "0.5.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
